General alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ h2{
     line-height: 60px;
     text-align: left;
     margin-bottom: 0px;
+    letter-spacing: 0.16em;
 }
 
 /* Fix for backgrounds */
@@ -98,7 +99,7 @@ nav a{
 img.hero-bg {
     position: absolute;
     width: 100%;
-    height: auto;
+    max-height: 100vh;
     z-index: 1;
 }
 
@@ -106,6 +107,7 @@ img.hero-bg {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    min-height: 100vh;
 }
 
 .hero div, .hero div h3 {
@@ -114,7 +116,8 @@ img.hero-bg {
 
 .hero img {
     max-width: 40vw;
-    margin: auto;
+    margin: 0 auto;
+    align-self: baseline;
 }
 
 .tagline {
@@ -164,23 +167,28 @@ img.hero-bg {
     margin-bottom: 0;
 }
 
-.container{
-    padding:1em;
+.container {
+    padding: 0 1em;
 }
 
-.container-wide{
-    padding:1em 0em;
+.container-wide {
+    padding: 0em;
 }
 
+@media (min-width: 720px) {
+    .container{
+        padding: 0 3em;
+    }
+}
 
 .offset-header {
     max-width: 46em;
     margin: auto;
 }
 
-.textbox{
+.textbox {
     max-width: 38em;
-    margin: 4em auto;
+    margin: 4em auto 0;
     padding:0.5em 1em;
     background: #F8FFFF;
 
@@ -199,14 +207,16 @@ img.hero-bg {
 /* Community section */
 
 #community {
-    background: linear-gradient(180deg, #5E1978 24.36%, #05CCCB 100%);
+    background: linear-gradient(180deg, #5E1978 24.36%, #06FFFE 100%);
     display: block;
     margin: auto;
 }
 
 #community h2{
     margin-top: 0em;
+    padding-top: 2em;
     margin-left: 1em;
+    color: #06FFFE;
 }
 
 .community-container{
@@ -425,10 +435,6 @@ footer .links {
 
     .textbox{
         padding:0.5em 4em;
-    }
-
-    .container{
-        padding: 3em;
     }
 
     footer{
